# gai

./: .gitignore  Cargo.toml  README.md  config.toml  conventionalcommits.md  flake.nix  justfile  matrix.jsonc  template.env
.github/workflows/: site.yml
docs/: config.toml
docs/content/: config.md  docs.md  index.md  install.md  pricing.md  usage.md
docs/styles/: config.css  main.css  md.css  pricing.css
docs/templates/: base.html  config.html  footer.html  header.html  homepage.html  install.html  pricing.html
src/: app.rs  args.rs  auth.rs  cli.rs  commit.rs  config.rs  consts.rs  draw.rs  find.rs  git.rs  graph.rs  keys.rs  main.rs  opts.rs  print.rs  provider.rs  rebase.rs  request.rs  response.rs  reword.rs  state.rs  status.rs  tabs.rs  ui.rs  utils.rs
src/ai/: mod.rs  provider.rs  request.rs  response.rs  rules.rs
src/cli/: args.rs
src/cmd/: auth.rs  commit.rs  find.rs  log.rs  mod.rs  rebase.rs  rebase_last.rs  rebase_range.rs  reword.rs  status.rs
src/cmd/rebase/: branch.rs  last.rs  mod.rs  plan.rs  range.rs
src/events/: keys.rs
src/git/: branch.rs  checkout.rs  commit.rs  diff.rs  diffs.rs  errors.rs  log.rs  mod.rs  ops.rs  rebase.rs  rebase_plan.rs  repo.rs  reset.rs  staging.rs  state.rs  status.rs  utils.rs
src/print/: commits.rs  find.rs  history.rs  input.rs  loading.rs  log.rs  menu.rs  mod.rs  options.rs  progressbar.rs  query.rs  rebase.rs  rebase_plan.rs  renderer.rs  spinner.rs  status.rs  style.rs  tree.rs  utils.rs
src/providers/: gai.rs  gemini.rs  openai.rs  provider.rs
src/requests/: mod.rs  rebase.rs  rebase_plan.rs  reword.rs  tokens.rs
src/responses/: commit.rs  find.rs  mod.rs  rebase.rs  rebase_plan.rs  reword.rs
src/schema/: commit.rs  mod.rs  rebase.rs  rebase_plan.rs  reword.rs
src/settings/: load.rs  mod.rs
src/tui/: app.rs  events.rs  keys.rs  mod.rs  tabs.rs  ui.rs
src/utils/: consts.rs  mod.rs  open.rs
