[package]
name = "gai"
version = "0.1.0"
edition = "2024"
homepage = "https://gai.fyi"
repository = "https://github.com/cube-cult/gai"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = false }
clap = { version = "4.5.48", default-features = false, features = ["derive", "std", "help", "color", "usage", "suggestions", "error-context"] }
config = { version = "0.15.19", default-features = false, features = ["toml"] }
crossterm = { version = "0.29.0", default-features = false, features = ["events", "event-stream"] }
dialoguer = { version = "0.12.0", default-features = false, features = ["password"] }
directories = { version = "6.0.0", default-features = false }
dotenv = { version = "0.15.0", default-features = false }
futures = { version = "0.3.31", default-features = false }
git2 = { version = "0.20.2", default-features = false }
indicatif = { version = "0.18.0", default-features = false }
open = { version = "5.3.2", default-features = false }
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
reqwest = { version = "0.12.24", default-features = false }
rig-core = "0.21.0"
schemars = { version = "1.0.4", default-features = false, features = ["derive"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = { version = "1.0.145", default-features = false, features = ["std"] }
strum = { version = "0.27.2", default-features = false, features = ["derive", "strum_macros"] }
throbber-widgets-tui = { version = "0.9.0", default-features = false }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-util = { version = "0.7.16", default-features = false }
toml = { version = "0.9.6", default-features = false, features = ["display", "parse", "serde"] }
walkdir = "2.5.0"

[profile.dev]
opt-level = 0

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
