[package]
name = "gai"
version = "0.1.0-alpha.3"
edition = "2024"
homepage = "https://gai.fyi"
repository = "https://github.com/cube-cult/gai"

[dependencies]
anstream = { version = "1.0.0", default-features = false, features = ["auto"] }
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = false, features = ["alloc", "now"] }
clap = { version = "4.5.48", default-features = false, features = ["derive", "std", "help", "color", "usage", "suggestions", "error-context"] }
config = { version = "0.15.19", default-features = false, features = ["toml"] }
directories = { version = "6.0.0", default-features = false }
dotenv = "0.15.0"
git2 = { git = "https://github.com/rust-lang/git2-rs.git", default-features = false}
humantime = { version = "2.3.0", default-features = false }
llmao = { git = "https://github.com/nuttycream/llmao", branch = "main", version = "0.0.2" }
owo-colors = { version = "4.3.0", default-features = false }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = { version = "1.0.145", default-features = false, features = ["std"] }
strum = { version = "0.27.2", default-features = false, features = ["derive", "strum_macros"] }
ureq = { version = "3.1.4", default-features = false, features = ["json", "rustls"] }

[profile.dev]
opt-level = 0

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
tempfile = "3.24.0"
